# upright

./: .gitignore  LICENSE  Pipfile  README.md  package.xml  requirements.txt  robot.py  robot_planar.py  setup.py  sim.py  simulation.py  sqp.py  tray.py  tray_balance.py  tray_balance_2d.py  tray_balance_3d.py  util.py
tray_balance_assets/: CMakeLists.txt  package.xml
tray_balance_assets/config/: controller.yaml  dec.yaml  default.yaml  omni.yaml  omni_demo.yaml  panda.yaml  panda_demo.yaml  simulation.yaml
tray_balance_assets/franka_panda/: compile_xacro.sh  panda.urdf  panda_tray.urdf.xacro
tray_balance_assets/thing/: .gitignore
tray_balance_assets/thing/xacro/: end_effector_fingers.urdf.xacro  end_effector_tray.urdf.xacro  obstacles.urdf.xacro
tray_balance_assets/urdf/: .gitignore  compile_xacro.sh  mm_ocs2.urdf  mm_ocs2.urdf.xacro  mm_pyb.urdf  mm_pyb.urdf.xacro  mm_pyb_static_obs.urdf
tray_balance_constraints/: CMakeLists.txt  package.xml  setup.py
tray_balance_constraints/include/tray_balance_constraints/: bounded.h  dynamics.h  ellipsoid.h  inequality_constraints.h  nominal.h  parsing.h  robust.h  robust2.h  support_area.h  types.h  util.h
tray_balance_constraints/scripts/: ellipsoid.py
tray_balance_constraints/src/: parsing.cpp  pybindings.cpp
tray_balance_constraints/src/tray_balance_constraints/: __init__.py  composition.py  logging.py  math.py  parsing.py  trajectory.py  util.py
tray_balance_msgs/: CMakeLists.txt  package.xml
tray_balance_msgs/msg/: TrayBalanceControllerInfo.msg
tray_balance_ocs2/: CMakeLists.txt  README.md  package.xml  setup.py
tray_balance_ocs2/config/mpc/: task.info
tray_balance_ocs2/include/ocs2_mobile_manipulator_modified/: MobileManipulatorDummyVisualization.h  MobileManipulatorDynamics.h  MobileManipulatorInterface.h  MobileManipulatorPinocchioMapping.h  MobileManipulatorPreComputation.h  MobileManipulatorPyBindings.h  MobileManipulatorReferenceTrajectory.h  definitions.h
tray_balance_ocs2/include/tray_balance_ocs2/: ControllerSettings.h  MobileManipulatorDummyVisualization.h  MobileManipulatorDynamics.h  MobileManipulatorInterface.h  MobileManipulatorPinocchioMapping.h  MobileManipulatorPreComputation.h  MobileManipulatorPyBindings.h  MobileManipulatorPythonInterface.h  MobileManipulatorReferenceTrajectory.h  PandaDynamics.h  PandaPinocchioMapping.h  TaskSettings.h  definitions.h  types.h  util.h
tray_balance_ocs2/launch/: mm.launch  mobile_manipulator.launch  mobile_manipulator_distance.launch  visualize.launch
tray_balance_ocs2/meshes/: tor11_front.dae
tray_balance_ocs2/scripts/: opt_state.py  test_pinocchio.py
tray_balance_ocs2/src/: MobileManipulatorDistanceVisualization.cpp  MobileManipulatorDummyMRT.cpp  MobileManipulatorDummyVisualization.cpp  MobileManipulatorDynamics.cpp  MobileManipulatorInterface.cpp  MobileManipulatorMpcNode.cpp  MobileManipulatorPreComputation.cpp  MobileManipulatorTarget.cpp  PandaDynamics.cpp  TaskSettings.cpp  mpc_mrt_node.cpp  pybindings.cpp
tray_balance_ocs2/src/constraint/: BoundedBalancingConstraints.cpp  EndEffectorConstraint.cpp  JointAccelerationLimits.cpp  JointVelocityLimits.cpp
tray_balance_ocs2/src/dynamics/: FixedBaseDynamics.cpp  MobileManipulatorDynamics.cpp
tray_balance_ocs2/src/ocs2_mobile_manipulator_modified/: __init__.py
tray_balance_ocs2/src/ros/: MobileManipulatorDummyMRT.cpp
tray_balance_ocs2/src/tray_balance_ocs2/: __init__.py  manager.py  parsing.py  robot.py  trajectory.py  wrappers.py
tray_balance_ocs2/test/: testEndEffectorConstraint.cpp  testSelfCollision.cpp
tray_balance_ocs2/urdf/: mm.urdf  mm_pyb.urdf  obstacles.urdf
upright_assets/: CMakeLists.txt  package.xml
upright_assets/franka_panda/: panda.urdf  panda.urdf.xacro  panda_tray.urdf
upright_assets/thing/: compile_xacro.sh
upright_cmd/: CMakeLists.txt  package.xml  setup.py
upright_cmd/config/: arrangements.yaml  cameras.yaml  controller.yaml  home.yaml  simulation.yaml
upright_cmd/scripts/: compute_minimum_mu.py  record.py
upright_control/: CMakeLists.txt  README.md  package.xml  setup.py
upright_control/src/: MobileManipulatorInterface.cpp  controller_interface.cpp  inertial_alignment.cpp  pybindings.cpp
upright_control/test/: testEndEffectorConstraint.cpp  testSelfCollision.cpp
upright_core/: CMakeLists.txt  package.xml  setup.py
upright_core/scripts/: ellipsoid.py
upright_core/src/: pybindings.cpp
upright_core/tests/: config.yaml  test_math.py  test_parsing.py  test_polyhedron.py
upright_robust/: CMakeLists.txt  README.md  package.xml  setup.py  upright_robust.py
upright_robust/config/: arrangements.yaml  controller.yaml  simulation.yaml
upright_robust/scripts/: box_param_estimate.py  compute_inertia.py  constraint_elimination.py  lift_wrench_velocity.py  mpc_sim_loop.py  old_routines.py  optimize_acceleration.py  parse_simulation_runs.py  planning_sim.py  planning_sim_loop.py  plot_goal_dists.py  process_many.sh  process_sim_runs.py  ros_controller.py  ros_simulation.py  simulate_many.sh  simulation.py  upright_robust.py
upright_robust/src/: pybindings.cpp
upright_robust/test/: test_double_description.py  test_regressor.py
upright_ros_interface/: CMakeLists.txt  README.md  package.xml  setup.py
upright_ros_interface/config/: ridgeback.yaml  ridgeback_transmission.urdf  ur10_controllers.yaml
upright_ros_interface/launch/: mpc.launch  mpc_mrt.launch  mpc_mrt_simulation.launch  projectile_estimator.launch  ridgeback.launch  robotiq.launch  test_estimation.launch  test_projectile_estimation.launch  test_robot_estimation.launch  thing.launch  thing_description.launch  track_plan.launch  track_plan_simulation.launch  ur10.launch  ur10_calibration.launch
upright_ros_interface/scripts/: gripper.py  home.py  parsing_server.py  test_parse_request.py
upright_ros_interface/src/: mpc_node.cpp  mrt_node.cpp  pybindings.cpp  python_cpp.cpp  track_plan_node.cpp  twist_interface.cpp
upright_ros_interface/srv/: ParseControlSettings.srv  ParseTargetTrajectory.srv
upright_sim/: .gitignore  CMakeLists.txt  package.xml  requirements.txt  setup.py
(+891 files in other folders)
