<?xml version="1.0"?>
<package format="2">
  <name>tray_balance_constraints</name>
  <version>0.0.0</version>
    <description>
      Implementation of the balancing constraints in C++ with bindings to Python for use in other packages (like controllers).
    </description>
  <maintainer email="adam.heins@robotics.utias.utoronto.ca">Adam Heins</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>pybind11_catkin</depend>

</package>
