<?xml version="1.0"?>
<package format="2">
  <name>tray_balance_msgs</name>
  <version>0.0.0</version>
  <description>The tray_balance_msgs package</description>
  <maintainer email="adam.heins@robotics.utias.utoronto.ca">Adam Heins</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>sensor_msgs</depend>
</package>
