<?xml version="1.0"?>
<package format="2">
  <name>tray_balance_ocs2</name>
  <version>0.0.0</version>
  <description>The tray_balance_ocs2 package</description>

  <maintainer email="adam.heins@robotics.utias.utoronto.ca">Adam Heins</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_clang_tools</build_depend>

  <depend>tf</depend>
  <depend>urdf</depend>
  <depend>kdl_parser</depend>
  <depend>robot_state_publisher</depend>
  <depend>pybind11_catkin</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ocs2_core</depend>
  <depend>ocs2_ddp</depend>
  <depend>ocs2_mpc</depend>
  <depend>ocs2_sqp</depend>
  <depend>ocs2_robotic_tools</depend>
  <depend>ocs2_ros_interfaces</depend>
  <depend>ocs2_pinocchio_interface</depend>
  <depend>ocs2_self_collision</depend>
  <depend>ocs2_self_collision_visualization</depend>
  <depend>pinocchio</depend>
  <depend>upright_core</depend>
  <depend>ocs2_python_interface</depend>

</package>
