<?xml version="1.0"?>
<package format="2">
  <name>upright_cmd</name>
  <version>0.0.0</version>
  <description>The upright_cmd package</description>
  <maintainer email="adam.heins@robotics.utias.utoronto.ca">Adam Heins</maintainer>
  <license>MIT</license>

  <!-- TODO add the rest -->
  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>upright_sim</depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
