<?xml version="1.0"?>
<package format="2">
  <name>upright_core</name>
  <version>0.0.0</version>
    <description>
      Implementation of the balancing constraints in C++ with bindings to Python for use in other packages (like controllers).
    </description>
  <maintainer email="adam.heins@robotics.utias.utoronto.ca">Adam Heins</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pybind11_catkin</build_depend>
  <build_depend>libeigen3-dev</build_depend>

  <exec_depend>pybind11_catkin</exec_depend>

</package>
