<?xml version="1.0"?>
<package format="2">
  <name>upright_ros_interface</name>
  <version>0.0.0</version>
  <description>The upright_ros_interface package</description>
  <maintainer email="adam.heins@robotics.utias.utoronto.ca">Adam Heins</maintainer>
  <license>MIT</license>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>upright_msgs</depend>
  <buildtool_depend>catkin</buildtool_depend>
</package>
