<?xml version="1.0"?>
<package format="2">
  <name>upright_sim</name>
  <version>0.0.0</version>
  <description>
    Pybullet simulation for mobile manipulator.
    </description>
  <maintainer email="adam.heins@robotics.utias.utoronto.ca">Adam Heins</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>upright_core</exec_depend>

</package>
